--- a/XamlControlsGallery/ControlPages/MenuBarPage.xaml
+++ b/XamlControlsGallery/ControlPages/MenuBarPage.xaml
@@ -7,32 +7,31 @@
       xmlns:data="using:AppUIBasics.Data"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample HeaderText="A simple MenuBar" 
                               XamlSource="MenuBar\MenuBarSample1.txt">
             <StackPanel>
                 <TextBlock x:Name="SelectedOptionText" Text="" />
-                <muxc:MenuBar x:Name="Example1">
-                    <muxc:MenuBarItem Title="File">
+                <MenuBar x:Name="Example1">
+                    <MenuBarItem Title="File">
                         <MenuFlyoutItem x:Name="o1" Text="New" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o2" Text="Open" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o3" Text="Save" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o4" Text="Exit" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Edit">
+                    <MenuBarItem Title="Edit">
                         <MenuFlyoutItem x:Name="o5" Text="Undo" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o6" Text="Cut" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o7" Text="Copy" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="o8" Text="Paste" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Help">
+                    <MenuBarItem Title="Help">
                         <MenuFlyoutItem x:Name="o9" Text="About" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
-                </muxc:MenuBar>
+                    </MenuBarItem>
+                </MenuBar>
             </StackPanel>
         </local:ControlExample>
 
@@ -40,8 +39,8 @@
                               XamlSource="Menubar\MenuBarSample3.txt">
             <StackPanel>
                 <TextBlock x:Name="SelectedOptionText1" Text="" />
-                <muxc:MenuBar x:Name="Example2">
-                    <muxc:MenuBarItem Title="File">
+                <MenuBar x:Name="Example2">
+                    <MenuBarItem Title="File">
                         <MenuFlyoutItem x:Name ="t2" Text="New" Click="OnElementClicked">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="N"/>
@@ -62,9 +61,9 @@
                                 <KeyboardAccelerator Modifiers="Control" Key="E"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Edit">
+                    <MenuBarItem Title="Edit">
                         <MenuFlyoutItem x:Name="t5" Text="Undo" Click="OnElementClicked">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="Z"/>
@@ -85,17 +84,17 @@
                                 <KeyboardAccelerator Modifiers="Control" Key="V"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Help">
+                    <MenuBarItem Title="Help">
                         <MenuFlyoutItem x:Name="t9" Text="About" Click="OnElementClicked">
                             <MenuFlyoutItem.KeyboardAccelerators>
                                 <KeyboardAccelerator Modifiers="Control" Key="I"/>
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                </muxc:MenuBar>
+                </MenuBar>
             </StackPanel>
         </local:ControlExample>
 
@@ -103,8 +102,8 @@
                               XamlSource="MenuBar\MenuBarSample2.txt">
             <StackPanel>
                 <TextBlock x:Name="SelectedOptionText2" Text="" />
-                <muxc:MenuBar x:Name="Example3">
-                    <muxc:MenuBarItem Title="File">
+                <MenuBar x:Name="Example3">
+                    <MenuBarItem Title="File">
                         <MenuFlyoutSubItem Text="New">
                             <MenuFlyoutItem x:Name="z1" Text="Plain Text Document" Click="OnElementClicked"/>
                             <MenuFlyoutItem x:Name="z2" Text="Rich Text Document" Click="OnElementClicked"/>
@@ -114,30 +113,30 @@
                         <MenuFlyoutItem x:Name="z5" Text="Save" Click="OnElementClicked"/>
                         <MenuFlyoutSeparator />
                         <MenuFlyoutItem x:Name="z6" Text="Exit" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Edit">
+                    <MenuBarItem Title="Edit">
                         <MenuFlyoutItem x:Name="z7" Text="Undo" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="z8" Text="Cut" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="z9" Text="Copy" Click="OnElementClicked"/>
                         <MenuFlyoutItem x:Name="z11" Text="Paste" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="View">
+                    <MenuBarItem Title="View">
                         <MenuFlyoutItem x:Name="z12" Text="Output" Click="OnElementClicked"/>
                         <MenuFlyoutSeparator/>
-                        <muxc:RadioMenuFlyoutItem x:Name="z13" Text="Landscape" GroupName="OrientationGroup" Click="OnElementClicked"/>
-                        <muxc:RadioMenuFlyoutItem x:Name="z14" Text="Portrait" GroupName="OrientationGroup" IsChecked="True" Click="OnElementClicked"/>
+                        <RadioMenuFlyoutItem x:Name="z13" Text="Landscape" GroupName="OrientationGroup" Click="OnElementClicked"/>
+                        <RadioMenuFlyoutItem x:Name="z14" Text="Portrait" GroupName="OrientationGroup" IsChecked="True" Click="OnElementClicked"/>
                         <MenuFlyoutSeparator/>
-                        <muxc:RadioMenuFlyoutItem x:Name="z15" Text="Small icons" GroupName="SizeGroup" Click="OnElementClicked"/>
-                        <muxc:RadioMenuFlyoutItem x:Name="z16" Text="Medium icons" IsChecked="True" GroupName="SizeGroup" Click="OnElementClicked"/>
-                        <muxc:RadioMenuFlyoutItem x:Name="z17" Text="Large icons" GroupName="SizeGroup" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
+                        <RadioMenuFlyoutItem x:Name="z15" Text="Small icons" GroupName="SizeGroup" Click="OnElementClicked"/>
+                        <RadioMenuFlyoutItem x:Name="z16" Text="Medium icons" IsChecked="True" GroupName="SizeGroup" Click="OnElementClicked"/>
+                        <RadioMenuFlyoutItem x:Name="z17" Text="Large icons" GroupName="SizeGroup" Click="OnElementClicked"/>
+                    </MenuBarItem>
 
-                    <muxc:MenuBarItem Title="Help">
+                    <MenuBarItem Title="Help">
                         <MenuFlyoutItem x:Name="z18" Text="About" Click="OnElementClicked"/>
-                    </muxc:MenuBarItem>
-                </muxc:MenuBar>
+                    </MenuBarItem>
+                </MenuBar>
             </StackPanel>
         </local:ControlExample>
     </StackPanel>
