--- a/XamlControlsGallery/ControlPages/PersonPicturePage.xaml
+++ b/XamlControlsGallery/ControlPages/PersonPicturePage.xaml
@@ -5,14 +5,13 @@
     xmlns:local="using:AppUIBasics"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
 
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="Select different looks for the person picture.">
 
             <local:ControlExample.Example>
-                <muxc:PersonPicture x:Name="personPicture" Height="300"
+                <PersonPicture x:Name="personPicture" Height="300"
                 VerticalAlignment="Top"
                 ProfilePicture="{Binding IsChecked, ElementName=ProfileImageRadio, Converter={StaticResource booleanToValueConverter}, ConverterParameter='https://docs.microsoft.com/windows/uwp/contacts-and-calendar/images/shoulder-tap-static-payload.png'}"
                 DisplayName="{x:Bind DisplayNameRadio.IsChecked, Mode=OneWay, Converter={StaticResource booleanToValueConverter}, ConverterParameter='Jane Doe'}"
@@ -20,11 +19,11 @@
             </local:ControlExample.Example>
 
             <local:ControlExample.Options>
-                <muxc:RadioButtons Header="Profile type">
+                <RadioButtons Header="Profile type">
                     <RadioButton x:Name="ProfileImageRadio" Content="Profile Image" IsChecked="True" />
                     <RadioButton x:Name="DisplayNameRadio" Content="Display Name" />
                     <RadioButton x:Name="InitialsRadio" Content="Initials" />
-                </muxc:RadioButtons>
+                </RadioButtons>
             </local:ControlExample.Options>
             <local:ControlExample.Xaml>
                 <x:String>
