--- a/XamlControlsGallery/ControlPages/RadioButtonPage.xaml
+++ b/XamlControlsGallery/ControlPages/RadioButtonPage.xaml
@@ -13,27 +13,26 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample HeaderText="A group of RadioButton controls in a RadioButtons group.">
             <StackPanel>
-                <muxc:RadioButtons Header="Options:">
+                <RadioButtons Header="Options:">
                     <RadioButton Content="Option 1" Checked="RadioButton_Checked" />
                     <RadioButton Content="Option 2" Checked="RadioButton_Checked" />
                     <RadioButton Content="Option 3" Checked="RadioButton_Checked" />
-                </muxc:RadioButtons>
+                </RadioButtons>
             </StackPanel>
             <local:ControlExample.Output>
                 <TextBlock x:Name="Control1Output" Text="Select an option." />
             </local:ControlExample.Output>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:RadioButtons Header="Options:"&gt;
+&lt;RadioButtons Header="Options:"&gt;
     &lt;RadioButton Content="Option 1" Checked="RadioButton_Checked"/&gt;
     &lt;RadioButton Content="Option 2" Checked="RadioButton_Checked"/&gt;
     &lt;RadioButton Content="Option 3" Checked="RadioButton_Checked"/&gt;
-&lt;/muxc:RadioButtons&gt;
+&lt;/RadioButtons&gt;
                 </x:String>
             </local:ControlExample.Xaml>
         </local:ControlExample>
