--- a/XamlControlsGallery/ControlPages/RadioButtonsPage.xaml
+++ b/XamlControlsGallery/ControlPages/RadioButtonsPage.xaml
@@ -15,37 +15,37 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:AppUIBasics" xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:local="using:AppUIBasics"
     mc:Ignorable="d">
 
     <StackPanel>
         <local:ControlExample HeaderText="Two RadioButtons controls with strings as options.">
             <StackPanel>
-                <muxc:RadioButtons x:Name="BackgroundRadioButtons" MaxColumns="3" Header="Background" SelectedIndex="0" SelectionChanged="BackgroundColor_SelectionChanged">
+                <RadioButtons x:Name="BackgroundRadioButtons" MaxColumns="3" Header="Background" SelectedIndex="0" SelectionChanged="BackgroundColor_SelectionChanged">
                     <x:String>Green</x:String>
                     <x:String>Yellow</x:String>
                     <x:String>White</x:String>
-                </muxc:RadioButtons>
-                <muxc:RadioButtons x:Name="BorderRadioButtons" MaxColumns="3" Header="Border" SelectedIndex="1" SelectionChanged="BorderBrush_SelectionChanged">
+                </RadioButtons>
+                <RadioButtons x:Name="BorderRadioButtons" MaxColumns="3" Header="Border" SelectedIndex="1" SelectionChanged="BorderBrush_SelectionChanged">
                     <x:String>Green</x:String>
                     <x:String>Yellow</x:String>
                     <x:String>White</x:String>
-                </muxc:RadioButtons>
+                </RadioButtons>
                 <Border x:Name="ControlOutput" BorderThickness="10" BorderBrush="#FFFFD700" Background="#FFFFFFFF"
                         Height="50" Margin="0,10,0,10" />
             </StackPanel>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:RadioButtons x:Name="BackgroundRadioButtons" SelectedIndex="$(BackgroundRadioButtonsSubstitution)"  MaxColumns="3" Header="Background" SelectionChanged="BackgroundColor_SelectionChanged"&gt;
+&lt;RadioButtons x:Name="BackgroundRadioButtons" SelectedIndex="$(BackgroundRadioButtonsSubstitution)"  MaxColumns="3" Header="Background" SelectionChanged="BackgroundColor_SelectionChanged"&gt;
     &lt;x:String&gt;Green&lt;/x:String&gt;
     &lt;x:String&gt;Yellow&lt;/x:String&gt;
     &lt;x:String&gt;White&lt;/x:String&gt;
-&lt;/muxc:RadioButtons&gt;
-&lt;muxc:RadioButtons x:Name="BorderRadioButtons" SelectedIndex="$(BorderRadioButtonsSubstitution)" MaxColumns="3" Header="Border" SelectionChanged="BorderBrush_SelectionChanged"&gt;
+&lt;/RadioButtons&gt;
+&lt;RadioButtons x:Name="BorderRadioButtons" SelectedIndex="$(BorderRadioButtonsSubstitution)" MaxColumns="3" Header="Border" SelectionChanged="BorderBrush_SelectionChanged"&gt;
     &lt;x:String&gt;Green&lt;/x:String&gt;
     &lt;x:String&gt;Yellow&lt;/x:String&gt;
     &lt;x:String&gt;White&lt;/x:String&gt;
-&lt;/muxc:RadioButtons&gt;
+&lt;/RadioButtons&gt;
 
 &lt;Border x:Name="ControlOutput" BorderThickness="10" BorderBrush="#FFFFD700" Background="#FFFFFFFF"
         Height="50" Margin="0,10,0,10" /&gt;
