--- a/XamlControlsGallery/ControlPages/AutomationPropertiesPage.xaml
+++ b/XamlControlsGallery/ControlPages/AutomationPropertiesPage.xaml
@@ -15,8 +15,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:common="using:AppUIBasics.Common"
-    xmlns:local="using:AppUIBasics"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+    xmlns:local="using:AppUIBasics">
     <StackPanel>
         <TextBlock Margin="0,8,0,0" Text="To start the Narrator app, press Windows logo key + Ctrl + Enter. To navigate through text, press Caps + Left/Right arrow" 
                    TextWrapping="WrapWholeWords"/>
@@ -46,7 +45,7 @@
                         Laborum pariatur nemo for veritatis yet explicabo eaque or esse. Ipsum ullam omnis so sed nequeporro but magna.</TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock x:Name="FontSizeLabel" VerticalAlignment="Center" FontSize="16" Margin="0,0,8,0" Text="Font size of text"/>
-                        <muxc:NumberBox x:Name="FontSizeNumberBox" Minimum="10" Maximum="32" Value="14" ValueChanged="FontSizeNumberBox_ValueChanged"/>
+                        <NumberBox x:Name="FontSizeNumberBox" Minimum="10" Maximum="32" Value="14" ValueChanged="FontSizeNumberBox_ValueChanged"/>
                     </StackPanel>
                 </StackPanel>
             </local:ControlExample.Example>
@@ -57,7 +56,7 @@
     &lt;TextBlock x:Name="FontSizeLabel" Margin="0,0,8,0" Text="Font size of text"/&gt;
                     
     &lt;!-- This NumberBox is labeled by the TextBlock above --&gt;
-    &lt;muxc:NumberBox x:Name="FontSizeNumberBox" AutomationProperties.LabeledBy="{x:Bind FontSizeLabel}"
+    &lt;NumberBox x:Name="FontSizeNumberBox" AutomationProperties.LabeledBy="{x:Bind FontSizeLabel}"
                     Minimum="10" Maximum="32"/&gt;
 &lt;/StackPanel&gt;
                 </x:String>
