--- a/XamlControlsGallery/ControlPages/BorderPage.xaml
+++ b/XamlControlsGallery/ControlPages/BorderPage.xaml
@@ -17,7 +17,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:AppUIBasics"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A Border around a TextBlock.">
@@ -52,7 +51,7 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
 
-                        <muxc:RadioButtons Header="Background">
+                        <RadioButtons Header="Background">
 
                             <RadioButton
                                 Checked="BGRadioButton_Checked"
@@ -74,9 +73,9 @@
                                 Content="White"
                                 GroupName="BGColor"
                                 IsChecked="True" />
-                        </muxc:RadioButtons>
+                        </RadioButtons>
                         
-                        <muxc:RadioButtons Grid.Column="1" Header="BorderBrush">
+                        <RadioButtons Grid.Column="1" Header="BorderBrush">
 
                             <RadioButton
                                 Checked="RadioButton_Checked"
@@ -98,7 +97,7 @@
                                 Checked="RadioButton_Checked"
                                 Content="White"
                                 GroupName="BorderBrush" />
-                        </muxc:RadioButtons>
+                        </RadioButtons>
                     </Grid>
                 </StackPanel>
             </local:ControlExample.Options>
