--- a/XamlControlsGallery/ControlPages/BreadcrumbBarPage.xaml
+++ b/XamlControlsGallery/ControlPages/BreadcrumbBarPage.xaml
@@ -14,52 +14,51 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       xmlns:l="using:AppUIBasics.ControlPages"
       mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A BreadcrumbBar control">
             <local:ControlExample.Example>
-                <muxc:BreadcrumbBar x:Name="BreadcrumbBar1"/>
+                <BreadcrumbBar x:Name="BreadcrumbBar1"/>
             </local:ControlExample.Example>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:BreadcrumbBar x:Name="BreadcrumbBar1"/&gt;
+&lt;BreadcrumbBar x:Name="BreadcrumbBar1"/&gt;
                 </x:String>
             </local:ControlExample.Xaml>
         </local:ControlExample>
 
         <local:ControlExample x:Name="Example2" HeaderText="BreadCrumbBar Control with Custom DataTemplate">
             <local:ControlExample.Example>
-                <muxc:BreadcrumbBar x:Name="BreadcrumbBar2">
-                    <muxc:BreadcrumbBar.ItemTemplate>
+                <BreadcrumbBar x:Name="BreadcrumbBar2">
+                    <BreadcrumbBar.ItemTemplate>
                         <DataTemplate x:DataType="l:Folder">
-                            <muxc:BreadcrumbBarItem Content="{Binding}" AutomationProperties.Name="{Binding Name}">
-                                <muxc:BreadcrumbBarItem.ContentTemplate>
+                            <BreadcrumbBarItem Content="{Binding}" AutomationProperties.Name="{Binding Name}">
+                                <BreadcrumbBarItem.ContentTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Name}" />
                                     </DataTemplate>
-                                </muxc:BreadcrumbBarItem.ContentTemplate>
-                            </muxc:BreadcrumbBarItem>
+                                </BreadcrumbBarItem.ContentTemplate>
+                            </BreadcrumbBarItem>
                         </DataTemplate>
-                    </muxc:BreadcrumbBar.ItemTemplate>
-                </muxc:BreadcrumbBar>
+                    </BreadcrumbBar.ItemTemplate>
+                </BreadcrumbBar>
             </local:ControlExample.Example>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">    
-&lt;muxc:BreadcrumbBar x:Name="BreadcrumbBar1"/&gt;
-    &lt;muxc:BreadcrumbBar.ItemTemplate&gt;
+&lt;BreadcrumbBar x:Name="BreadcrumbBar1"/&gt;
+    &lt;BreadcrumbBar.ItemTemplate&gt;
         &lt;DataTemplate x:DataType="l:Folder"&gt;
-            &lt;muxc:BreadcrumbBarItem Content="{Binding}" AutomationProperties.Name="{Binding Name}"&gt;
-                &lt;muxc:BreadcrumbBarItem.ContentTemplate&gt;
+            &lt;BreadcrumbBarItem Content="{Binding}" AutomationProperties.Name="{Binding Name}"&gt;
+                &lt;BreadcrumbBarItem.ContentTemplate&gt;
                     &lt;DataTemplate&gt;
                         &lt;TextBlock Text="{Binding Name}" /&gt;
                     &lt;/DataTemplate&gt;
-                &lt;/muxc:BreadcrumbBarItem.ContentTemplate&gt;
-            &lt;/muxc:BreadcrumbBarItem&gt;
+                &lt;/BreadcrumbBarItem.ContentTemplate&gt;
+            &lt;/BreadcrumbBarItem&gt;
         &lt;/DataTemplate&gt;
-    &lt;/muxc:BreadcrumbBar.ItemTemplate&gt;
-&lt;/muxc:BreadcrumbBar&gt;
+    &lt;/BreadcrumbBar.ItemTemplate&gt;
+&lt;/BreadcrumbBar&gt;
                     </x:String>
             </local:ControlExample.Xaml>
             <local:ControlExample.CSharp>
