--- a/XamlControlsGallery/ControlPages/GridViewPage.xaml
+++ b/XamlControlsGallery/ControlPages/GridViewPage.xaml
@@ -14,8 +14,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AppUIBasics"
-    xmlns:local1="using:AppUIBasics.ControlPages"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+    xmlns:local1="using:AppUIBasics.ControlPages">
 
     <Page.Resources>
         <DataTemplate x:Key="ImageTemplate" x:DataType="local1:CustomDataObject">
@@ -122,7 +121,7 @@
             <local:ControlExample.Options>
                 <StackPanel>
                     <StackPanel.Resources>
-                        <Style x:Key="DefaultNumberBoxStyle" TargetType="muxc:NumberBox">
+                        <Style x:Key="DefaultNumberBoxStyle" TargetType="NumberBox">
                             <Setter Property="SpinButtonPlacementMode" Value="Inline" />
                             <Setter Property="SmallChange" Value="1" />
                             <Setter Property="HorizontalAlignment" Value="Stretch" />
@@ -132,15 +131,15 @@
                         </Style>
                     </StackPanel.Resources>
 
-                    <muxc:NumberBox x:Name="ColumnSpace" Minimum="0" Maximum="100" Value="5"
+                    <NumberBox x:Name="ColumnSpace" Minimum="0" Maximum="100" Value="5"
                                     Header="Space between columns" AutomationProperties.Name="Space between columns"
                                     Style="{ThemeResource DefaultNumberBoxStyle}" ValueChanged="NumberBox_ValueChanged" />
 
-                    <muxc:NumberBox x:Name="RowSpace" Minimum="0" Maximum="100" Value="5"
+                    <NumberBox x:Name="RowSpace" Minimum="0" Maximum="100" Value="5"
                                     Header="Space between rows" AutomationProperties.Name="Space between rows"
                                     Style="{ThemeResource DefaultNumberBoxStyle}" ValueChanged="NumberBox_ValueChanged" />
 
-                    <muxc:NumberBox x:Name="WrapItemCount" Minimum="1" Maximum="8" Value="3"
+                    <NumberBox x:Name="WrapItemCount" Minimum="1" Maximum="8" Value="3"
                                     Header="Maximum number of items before wrapping"
                                     AutomationProperties.Name="Maximum number of items before wrapping"
                                     Style="{ThemeResource DefaultNumberBoxStyle}" ValueChanged="NumberBox_ValueChanged" />
@@ -227,7 +226,7 @@ The data template is defined to display a CustomDataObject object (same type as 
             </Grid>
             <local:ControlExample.Options>
                 <StackPanel x:Name="Control2">
-                    <muxc:RadioButtons Header="ItemTemplate">
+                    <RadioButtons Header="ItemTemplate">
                         <RadioButton
                             Checked="ItemTemplate_Checked"
                             Content="Image"
@@ -249,7 +248,7 @@ The data template is defined to display a CustomDataObject object (same type as 
                             Content="Text"
                             GroupName="Template"
                             Tag="TextTemplate" />
-                    </muxc:RadioButtons>
+                    </RadioButtons>
                     <StackPanel>
                         <ToggleButton Margin="0,8,0,0" Click="FlowDirectionCheckBox_Click" Content="Reverse FlowDirection" />
                         <TextBlock Margin="0,18,0,10" Text="GridView Properties" />
