--- a/XamlControlsGallery/ControlPages/ImagePage.xaml
+++ b/XamlControlsGallery/ControlPages/ImagePage.xaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls" mc:Ignorable="d">
+        mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A basic image from a local file.">
 
@@ -40,7 +40,7 @@
             <Image x:Name="StretchImage" Stretch="None" Height="100" Width="100" Source="/Assets/SampleMedia/valley.jpg" />
 
             <local:ControlExample.Options>
-                <muxc:RadioButtons Header="Image stretch mode">
+                <RadioButtons Header="Image stretch mode">
                     <RadioButton x:Name="StretchNone" Content="None" GroupName="ImageStretch" IsChecked="True"
                         Checked="ImageStretch_Checked" />
                     <RadioButton x:Name="StretchFill" Content="Fill" GroupName="ImageStretch"
@@ -49,7 +49,7 @@
                         Checked="ImageStretch_Checked" />
                     <RadioButton x:Name="StretchUniformToFill" Content="UniformToFill" GroupName="ImageStretch"
                         Checked="ImageStretch_Checked" />
-                </muxc:RadioButtons>
+                </RadioButtons>
             </local:ControlExample.Options>
             <local:ControlExample.Xaml>
                 <x:String>
