--- a/XamlControlsGallery/ControlPages/InfoBarPage.xaml
+++ b/XamlControlsGallery/ControlPages/InfoBarPage.xaml
@@ -13,12 +13,12 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)" xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+      xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
       mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A closable InfoBar with options to change its Severity.">
             <local:ControlExample.Example>
-                <muxc:InfoBar x:Name="TestInfoBar1"
+                <InfoBar x:Name="TestInfoBar1"
                 IsOpen="True"
                 Title="Title"
                 Message="Essential app message for your users to be informed of, acknowledge, or take action on."
@@ -39,7 +39,7 @@
 
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:InfoBar 
+&lt;InfoBar 
     IsOpen="$(IsOpen)"
     Severity="$(Severity)"
     Title="Title"
@@ -53,7 +53,7 @@
         </local:ControlExample>
         <local:ControlExample x:Name="Example2" HeaderText="A closable InfoBar with a long or short message and various buttons">
             <local:ControlExample.Example>
-                <muxc:InfoBar x:Name="TestInfoBar2" IsOpen="True" Title="Title" />
+                <InfoBar x:Name="TestInfoBar2" IsOpen="True" Title="Title" />
             </local:ControlExample.Example>
             <local:ControlExample.Substitutions>
                 <local:ControlExampleSubstitution Key="IsOpen" Value="{ x:Bind IsOpenCheckBox2.IsChecked.Value, Mode=OneWay}" />
@@ -76,18 +76,18 @@
             </local:ControlExample.Options>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:InfoBar 
+&lt;InfoBar 
     IsOpen="$(IsOpen)"
     Title="Title"
     Message="$(DisplayMessage)" &gt;
     $(DisplayButton)
-&lt;/muxc:InfoBar&gt;
+&lt;/InfoBar&gt;
                 </x:String>
             </local:ControlExample.Xaml>
         </local:ControlExample>
         <local:ControlExample x:Name="Example3" HeaderText="A closable InfoBar with options to display the close button and icon">
             <local:ControlExample.Example>
-                <muxc:InfoBar x:Name="TestInfoBar3"
+                <InfoBar x:Name="TestInfoBar3"
                     IsOpen="True"
                     IsIconVisible="True"
                     IsClosable="True"
@@ -103,7 +103,7 @@
             </local:ControlExample.Options>
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:InfoBar 
+&lt;InfoBar 
     IsOpen="$(IsOpen)"
     IsIconVisible="$(IsIconVisible)"                    
     IsClosable="$(IsClosable)"
