--- a/XamlControlsGallery/ControlPages/InkCanvasPage.xaml
+++ b/XamlControlsGallery/ControlPages/InkCanvasPage.xaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls" mc:Ignorable="d">
+        mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A basic ink canvas.">
             <Grid Background="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" Width="300" Height="300" BorderBrush="Gray" BorderThickness="1">
@@ -22,10 +22,10 @@
                             ValueChanged="strokeSize_ValueChanged" Margin="0,12,0,0" IsFocusEngagementEnabled="False"/>
                     <CheckBox x:Name="drawAsHighlighter" Content="DrawAsHighlighter" IsChecked="False"
                             Checked="drawAsHighlighter_CheckedChanged" Unchecked="drawAsHighlighter_CheckedChanged" />
-                    <muxc:RadioButtons Header="Pen tip"  Margin="0,5,0,0">
+                    <RadioButtons Header="Pen tip"  Margin="0,5,0,0">
                         <RadioButton x:Name="penTipShape" Checked="PenTip_Checked" Content="Circle" IsChecked="True"></RadioButton>
                         <RadioButton Checked="PenTip_Checked" Content="Rectangle"></RadioButton>
-                    </muxc:RadioButtons>
+                    </RadioButtons>
                     <Button x:Name="clearAll" Content="Clear All" Click="clearAll_Click" Margin="0,8,0,0" />
                 </StackPanel>
             </local:ControlExample.Options>
