--- a/XamlControlsGallery/ControlPages/NumberBoxPage.xaml
+++ b/XamlControlsGallery/ControlPages/NumberBoxPage.xaml
@@ -15,18 +15,17 @@
         xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
         mc:Ignorable="d">
 
     <StackPanel HorizontalAlignment="Left">
         <local:ControlExample HeaderText="A NumberBox that evaluates expressions." 
                               XamlSource="NumberBox/NumberBoxSample1_xaml.txt">
             <local:ControlExample.Example>
-                <muxc:NumberBox Header="Enter an expression:" Value="NaN" PlaceholderText="1 + 2^2" AcceptsExpression="True" />
+                <NumberBox Header="Enter an expression:" Value="NaN" PlaceholderText="1 + 2^2" AcceptsExpression="True" />
             </local:ControlExample.Example>
             <local:ControlExample.Xaml>
                 <x:String>
-                    &lt;muxc:NumberBox Header="Enter an expression:" Value="NaN" PlaceholderText="1 + 2^2" AcceptsExpression="True" /&gt;
+                    &lt;NumberBox Header="Enter an expression:" Value="NaN" PlaceholderText="1 + 2^2" AcceptsExpression="True" /&gt;
                 </x:String>
             </local:ControlExample.Xaml>
         </local:ControlExample>
@@ -34,7 +33,7 @@
         <local:ControlExample HeaderText="A NumberBox with a spin button." 
                               XamlSource="NumberBox/NumberBoxSample2_xaml.txt">
             <local:ControlExample.Example>
-                <muxc:NumberBox x:Name="NumberBoxSpinButtonPlacementExample"
+                <NumberBox x:Name="NumberBoxSpinButtonPlacementExample"
                               VerticalAlignment="Top"
                               Header="Enter an integer:" 
                               Value="10" 
@@ -42,13 +41,13 @@
                               SmallChange="10"
                               LargeChange="100"
                               AutomationProperties.Name="NumberBox with spin button">
-                </muxc:NumberBox>
+                </NumberBox>
             </local:ControlExample.Example>
             <local:ControlExample.Options>
-                <muxc:RadioButtons x:Name="SpinButtonPlacementGroup" Header="SpinButton placement">
+                <RadioButtons x:Name="SpinButtonPlacementGroup" Header="SpinButton placement">
                     <RadioButton Content="Inline" Tag="Inline" Checked="RadioButton_Checked" />
                     <RadioButton Content="Compact" Tag="Compact" Checked="RadioButton_Checked" IsChecked="True" />
-                </muxc:RadioButtons>
+                </RadioButtons>
             </local:ControlExample.Options>
         </local:ControlExample>
         
@@ -56,7 +55,7 @@
                               XamlSource="NumberBox/NumberBoxSample3_xaml.txt"
                               CSharpSource="NumberBox/NumberBoxSample3_cs.txt">
             <local:ControlExample.Example>
-                <muxc:NumberBox x:Name="FormattedNumberBox" Header="Enter a dollar amount:" PlaceholderText="0.00" />
+                <NumberBox x:Name="FormattedNumberBox" Header="Enter a dollar amount:" PlaceholderText="0.00" />
             </local:ControlExample.Example>
         </local:ControlExample>
     </StackPanel>
