--- a/XamlControlsGallery/ControlPages/RatingControlPage.xaml
+++ b/XamlControlsGallery/ControlPages/RatingControlPage.xaml
@@ -2,13 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A simple RatingControl">
 
             <StackPanel VerticalAlignment="Top">
-                <muxc:RatingControl x:Name="RatingControl1" AutomationProperties.Name="Simple RatingControl"
+                <RatingControl x:Name="RatingControl1" AutomationProperties.Name="Simple RatingControl"
                     IsClearEnabled="{x:Bind clearEnabledCheck.IsChecked.Value, Mode=OneWay}"
                     Caption="312 ratings"
                     ValueChanged="RatingControl1_ValueChanged"
@@ -29,7 +28,7 @@
 
             <local:ControlExample.Xaml>
                 <x:String xml:space="preserve">
-&lt;muxc:RatingControl AutomationProperties.Name="Simple RatingControl" IsClearEnabled="$(IsClearEnabled)"
+&lt;RatingControl AutomationProperties.Name="Simple RatingControl" IsClearEnabled="$(IsClearEnabled)"
     IsReadOnly="$(IsReadOnly)" Caption="$(Caption)"/&gt;
                 </x:String>
             </local:ControlExample.Xaml>
@@ -42,7 +41,7 @@
 
         <local:ControlExample x:Name="Example2" HeaderText="PlaceholderValue of RatingControl">
 
-            <muxc:RatingControl x:Name="RatingControl2" HorizontalAlignment="Left" VerticalAlignment="Top"
+            <RatingControl x:Name="RatingControl2" HorizontalAlignment="Left" VerticalAlignment="Top"
                 PlaceholderValue="{x:Bind slider.Value, Mode=TwoWay}" AutomationProperties.Name="RatingControl with placeholder"/>
 
             <local:ControlExample.Options>
@@ -54,7 +53,7 @@
 
             <local:ControlExample.Xaml>
                 <x:String>
-                    &lt;muxc:RatingControl AutomationProperties.Name="RatingControl with placeholder" PlaceholderValue="$(Slider)" /&gt;
+                    &lt;RatingControl AutomationProperties.Name="RatingControl with placeholder" PlaceholderValue="$(Slider)" /&gt;
                 </x:String>
             </local:ControlExample.Xaml>
             <local:ControlExample.Substitutions>
