--- a/XamlControlsGallery/ControlPages/RevealFocusPage.xaml
+++ b/XamlControlsGallery/ControlPages/RevealFocusPage.xaml
@@ -15,7 +15,6 @@
       xmlns:local2="using:AppUIBasics.ControlPages"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       mc:Ignorable="d">
 
     <StackPanel  XYFocusKeyboardNavigation="Enabled">
@@ -82,10 +81,10 @@
             </StackPanel>
 
             <local:ControlExample.Options>
-                <muxc:RadioButtons Header="FocusVisualKind:">
+                <RadioButtons Header="FocusVisualKind:">
                     <RadioButton x:Name="HighVisibility" Content="High Visibility" Checked="HighVisibility_Checked"/>
                     <RadioButton x:Name="RevealFocus" Content="Reveal Focus"  Checked="RevealFocus_Checked"/>
-                </muxc:RadioButtons>
+                </RadioButtons>
             </local:ControlExample.Options>
             <local:ControlExample.Xaml>
                 <x:String>
@@ -154,7 +153,7 @@
                     <ComboBoxItem>Strawberries</ComboBoxItem>
                 </ComboBox>
 
-                <muxc:RatingControl Margin="5,16,0,0"
+                <RatingControl Margin="5,16,0,0"
                     AutomationProperties.Name="sample ratingControl"
                     FocusVisualMargin="{x:Bind local2:MyConverters.IntToThickness(marginSlider.Value), Mode=OneWay}"
                     FocusVisualPrimaryThickness="{x:Bind local2:MyConverters.IntToThickness(primarySlider.Value), Mode=OneWay}"
