--- a/XamlControlsGallery/ControlPages/RichEditBoxPage.xaml
+++ b/XamlControlsGallery/ControlPages/RichEditBoxPage.xaml
@@ -16,7 +16,6 @@
     xmlns:local="using:AppUIBasics"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:contract6Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 6)"
     mc:Ignorable="d">
 
@@ -87,14 +86,14 @@
                     </Button.Content>
                 </Button>
 
-                <muxc:DropDownButton x:Name="fontColorButton"
+                <DropDownButton x:Name="fontColorButton"
                                             BorderThickness="0" 
                                             AutomationProperties.Name="Font color"
                                             ToolTipService.ToolTip="Font color"
                                             Background="Transparent" 
                                             RelativePanel.AlignRightWithPanel="True">
                     <SymbolIcon Symbol="FontColor"/>
-                    <muxc:DropDownButton.Flyout>
+                    <DropDownButton.Flyout>
                         <Flyout Placement="Bottom">
                             <VariableSizedWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="3">
                                 <VariableSizedWrapGrid.Resources>
@@ -151,8 +150,8 @@
                                 </Button>
                             </VariableSizedWrapGrid>
                         </Flyout>
-                    </muxc:DropDownButton.Flyout>
-                </muxc:DropDownButton>
+                    </DropDownButton.Flyout>
+                </DropDownButton>
 
                 <RichEditBox x:Name="editor" MinWidth="300" Height="200" AutomationProperties.Name="Custom editor"
                              RelativePanel.Below="openFileButton" 
