--- a/XamlControlsGallery/ControlPages/SplitButtonPage.xaml
+++ b/XamlControlsGallery/ControlPages/SplitButtonPage.xaml
@@ -1,8 +1,7 @@
 <Page x:Class="AppUIBasics.ControlPages.SplitButtonPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:AppUIBasics"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+      xmlns:local="using:AppUIBasics">
 
     <Page.Resources>
         <x:Double x:Key="SwatchSize">32</x:Double>
@@ -14,9 +13,9 @@
                               WebViewHeight="150">
             <Grid x:Name="Control1" ColumnSpacing="24">
 
-                <muxc:SplitButton x:Name="myColorButton" AutomationProperties.Name="Font color" Padding="0" MinHeight="0" MinWidth="0" VerticalAlignment="Top" Click="myColorButton_Click">
+                <SplitButton x:Name="myColorButton" AutomationProperties.Name="Font color" Padding="0" MinHeight="0" MinWidth="0" VerticalAlignment="Top" Click="myColorButton_Click">
                     <Border x:Name="CurrentColor" Width="{StaticResource SwatchSize}" Height="{StaticResource SwatchSize}" Background="Green" Margin="0" CornerRadius="4,0,0,4"/>
-                    <muxc:SplitButton.Flyout>
+                    <SplitButton.Flyout>
                         <Flyout Placement="Bottom">
                             <GridView ItemClick="GridView_ItemClick" IsItemClickEnabled="True">
                                 <GridView.ItemsPanel>
@@ -45,8 +44,8 @@
                             </GridView>
 
                         </Flyout>
-                    </muxc:SplitButton.Flyout>
-                </muxc:SplitButton>
+                    </SplitButton.Flyout>
+                </SplitButton>
             </Grid>
             <local:ControlExample.Options>
                 <RichEditBox x:Name="myRichEditBox" Width="240" MinHeight="96"
@@ -57,9 +56,9 @@
 
         <local:ControlExample HeaderText="A SplitButton with text" XamlSource="Buttons\SplitButton\SplitButtonSample2.txt">
             <local:ControlExample.Example>
-                <muxc:SplitButton AutomationProperties.Name="Font color" x:Name="myColorButtonReveal" Padding="5" MinHeight="0" MinWidth="0" VerticalAlignment="Top">
+                <SplitButton AutomationProperties.Name="Font color" x:Name="myColorButtonReveal" Padding="5" MinHeight="0" MinWidth="0" VerticalAlignment="Top">
                     Choose color
-                    <muxc:SplitButton.Flyout>
+                    <SplitButton.Flyout>
                         <Flyout Placement="Bottom">
                             <VariableSizedWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="3">
                                 <VariableSizedWrapGrid.Resources>
@@ -124,8 +123,8 @@
                                 </Button>
                             </VariableSizedWrapGrid>
                         </Flyout>
-                    </muxc:SplitButton.Flyout>
-                </muxc:SplitButton>
+                    </SplitButton.Flyout>
+                </SplitButton>
             </local:ControlExample.Example>
         </local:ControlExample>
     </StackPanel>
