--- a/XamlControlsGallery/ControlPages/ToggleSplitButtonPage.xaml
+++ b/XamlControlsGallery/ControlPages/ToggleSplitButtonPage.xaml
@@ -4,15 +4,14 @@
       xmlns:local="using:AppUIBasics"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="Using ToggleSplitButton to control bulleted list functionality in RichEditBox" 
                               XamlSource="Buttons\ToggleSplitButton\ToggleSplitButtonSample1.txt"
                               WebViewHeight="150">
-            <muxc:ToggleSplitButton x:Name="myListButton" AutomationProperties.Name="Bullets" VerticalAlignment="Top" IsCheckedChanged="MyListButton_IsCheckedChanged">
+            <ToggleSplitButton x:Name="myListButton" AutomationProperties.Name="Bullets" VerticalAlignment="Top" IsCheckedChanged="MyListButton_IsCheckedChanged">
                 <SymbolIcon x:Name="mySymbolIcon" Symbol="List"/>
-                <muxc:ToggleSplitButton.Flyout>
+                <ToggleSplitButton.Flyout>
                     <Flyout Placement="Bottom">
                         <StackPanel Orientation="Horizontal">
                             <StackPanel.Resources>
@@ -32,8 +31,8 @@
                             </Button>
                         </StackPanel>
                     </Flyout>
-                </muxc:ToggleSplitButton.Flyout>
-            </muxc:ToggleSplitButton>
+                </ToggleSplitButton.Flyout>
+            </ToggleSplitButton>
             <local:ControlExample.Options>
                 <RichEditBox x:Name="myRichEditBox" Width="240" MinHeight="96" AutomationProperties.Name="Text entry"/>
             </local:ControlExample.Options>
