--- a/XamlControlsGallery/ControlPages/VariableSizedWrapGridPage.xaml
+++ b/XamlControlsGallery/ControlPages/VariableSizedWrapGridPage.xaml
@@ -14,7 +14,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AppUIBasics"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls" mc:Ignorable="d">
+        mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="A VariableSizedWrapGrid control.">
 
@@ -26,10 +26,10 @@
             </VariableSizedWrapGrid>
 
             <local:ControlExample.Options>
-                <muxc:RadioButtons x:Name="OrientationGroup" Header="Orientation">
+                <RadioButtons x:Name="OrientationGroup" Header="Orientation">
                     <RadioButton Content="Horizontal" Tag="Horizontal" Checked="RadioButton_Checked" />
                     <RadioButton Content="Vertical" Tag="Vertical" Checked="RadioButton_Checked" IsChecked="True" />
-                </muxc:RadioButtons>
+                </RadioButtons>
             </local:ControlExample.Options>
 
             <local:ControlExample.Xaml>
