--- a/XamlControlsGallery/ControlPages/ViewBoxPage.xaml
+++ b/XamlControlsGallery/ControlPages/ViewBoxPage.xaml
@@ -15,8 +15,7 @@
     xmlns:local="using:AppUIBasics"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-      mc:Ignorable="d">
+    mc:Ignorable="d">
     <StackPanel>
         <local:ControlExample x:Name="Example1" HeaderText="Content inside of a Viewbox.">
             <Viewbox x:Name="Control1" Height="{x:Bind SizeSlider.Value, Mode=OneWay}"
@@ -39,18 +38,18 @@
                 <StackPanel Width="200">
                     <Slider x:Name="SizeSlider" Header="Width/Height" Maximum="300" Minimum="20" Value="200" />
 
-                    <muxc:RadioButtons Header="Stretch">
+                    <RadioButtons Header="Stretch">
                         <RadioButton Content="None" Tag="None" Checked="StretchButton_Checked" />
                         <RadioButton Content="Fill" Tag="Fill" Checked="StretchButton_Checked" />
                         <RadioButton Content="Uniform" Tag="Uniform" Checked="StretchButton_Checked" IsChecked="True" />
                         <RadioButton Content="UniformToFill" Tag="UniformToFill" Checked="StretchButton_Checked" />
-                    </muxc:RadioButtons>
+                    </RadioButtons>
 
-                    <muxc:RadioButtons Header="StretchDirection">
+                    <RadioButtons Header="StretchDirection">
                         <RadioButton Content="UpOnly" Tag="UpOnly" GroupName="StretchDirection" Checked="StretchDirectionButton_Checked" />
                         <RadioButton Content="DownOnly" Tag="DownOnly" GroupName="StretchDirection" Checked="StretchDirectionButton_Checked" />
                         <RadioButton Content="Both" Tag="Both" GroupName="StretchDirection" Checked="StretchDirectionButton_Checked" IsChecked="True" />
-                    </muxc:RadioButtons>
+                    </RadioButtons>
                 </StackPanel>
             </local:ControlExample.Options>
 
