--- a/XamlControlsGallery/Navigation/NavigationRootPage.xaml
+++ b/XamlControlsGallery/Navigation/NavigationRootPage.xaml
@@ -13,10 +13,9 @@
     x:Class="AppUIBasics.NavigationRootPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:local="using:AppUIBasics"
     HighContrastAdjustment="None"
-    muxc:BackdropMaterial.ApplyToRootOrPageBackground="True">
+    BackdropMaterial.ApplyToRootOrPageBackground="True">
 
     <Page.Resources>
         <ResourceDictionary>
@@ -88,7 +87,7 @@
                        Style="{StaticResource CaptionTextBlockStyle}" />
         </Border>
 
-        <muxc:NavigationView
+        <NavigationView
             Canvas.ZIndex="0"
             x:Name="NavigationViewControl"
             Grid.Column="1"
@@ -102,7 +101,7 @@
             DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
             ItemInvoked="OnNavigationViewItemInvoked"
             Loaded="OnNavigationViewControlLoaded">
-            <muxc:NavigationView.AutoSuggestBox>
+            <NavigationView.AutoSuggestBox>
                 <AutoSuggestBox
                     x:Name="controlsSearchBox"
                     VerticalAlignment="Center"
@@ -117,9 +116,9 @@
                         <KeyboardAccelerator Modifiers="Control" Key="F" Invoked="CtrlF_Invoked" />
                     </AutoSuggestBox.KeyboardAccelerators>
                 </AutoSuggestBox>
-            </muxc:NavigationView.AutoSuggestBox>
+            </NavigationView.AutoSuggestBox>
 
             <Frame x:Name="rootFrame" Navigated="OnRootFrameNavigated"/>
-        </muxc:NavigationView>
+        </NavigationView>
     </Grid>
 </Page>
