--- a/XamlControlsGallery/SettingsPage.xaml
+++ b/XamlControlsGallery/SettingsPage.xaml
@@ -1,7 +1,7 @@
  <Page
     x:Class="AppUIBasics.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:muxc="using:Microsoft.UI.Xaml.Controls">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid>
         <Grid.ChildrenTransitions>
@@ -58,11 +58,11 @@
                 </StackPanel>
 
                 <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Margin="0,40,0,0" Text="Navigation Style" />
-                <muxc:RadioButtons x:Name="navigationLocation" Margin="0,10,0,0"
+                <RadioButtons x:Name="navigationLocation" Margin="0,10,0,0"
                         Header="Navigation position" SelectionChanged="navigationLocation_SelectionChanged">
                     <RadioButton Content="Left"/>
                     <RadioButton Content="Top"/>
-                </muxc:RadioButtons>
+                </RadioButtons>
 
                 
 
